--- a/leadguitar.css
+++ b/leadguitar.css
@@ -12438,3 +12438,50 @@ a.text-dark:focus {
         overflow-y: scroll !important;
     }
 }
+.slider,.slider2 {
+  max-width:450px;
+  height: 40px;
+  position: relative;
+  border-radius: 2px;
+  background-color: #333;
+  overflow: hidden;
+  text-align: center;
+  margin:0 auto;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
+.slider_bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: #7AC23C;
+  z-index: 1;
+}
+
+.slider_label {
+  width: 55px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 40px;
+  line-height: 35px;
+  background: #fff;
+  z-index: 3;
+  cursor: e-resize;
+  color: #ff9e77;
+  font-size: 50px;
+}
+
+.labelTip {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 13px;
+  line-height: 38px;
+  text-align: center;
+  z-index: 2;
+}
