--- a/leadguitar.css
+++ b/leadguitar.css
@@ -12485,3 +12485,11 @@ a.text-dark:focus {
   text-align: center;
   z-index: 2;
 }
+
+.fanpage:hover{background:#333}
+.bg-facebook{background:#3B5998}
+.bg-twitter{background:#4099FF}
+.bg-pinterest{background:#cb2027}
+.bg-instagram{background:#f09433;background:linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%)}
+.bg-whatsapp{background:#4fce5d}
+button[type=submit]:disabled, input[type=submit]:disabled{background:#555!important}
