--- a/leadguitar.css
+++ b/leadguitar.css
@@ -13518,7 +13518,7 @@ ul.children{margin-left:5%}
 .img_video{width:99%;height:auto;max-width:1024px}
 .wp-block-embed-youtube{margin:0}
 .comment-author .avatar{border-radius:50%;width:70px;height:70px}
-.divisor{background:url(/img/teme-leadguitar.mx.png);height:35px}
+.divisor{background:url(https://www.leadguitar.mx/img/teme-leadguitar.mx.png);height:35px}
 .va-b{vertical-align:bottom}
 .pick{height:7px;width:7px;background:#2264b9;border-top-left-radius:88%;border-top-right-radius:50% 100%;border-bottom-right-radius:4px;border-bottom-left-radius:100% 50%;transform:rotate(45deg);padding:7px;margin:0 0 -20px -3px}
 
@@ -13693,7 +13693,7 @@ i.icss-info-circle:after {
     transform: translateX(-50%);
 }
 .ldgtr_info {
-    background: url(/img/download-msj.png);
+    background: url(https://www.leadguitar.mx/img/download-msj.png);
         background-position-x: 0%;
         background-position-y: 0%;
         background-repeat: repeat;
