--- a/leadguitar.css
+++ b/leadguitar.css
@@ -2854,7 +2854,7 @@ a:hover {
 /* Large button */
 
 .btn-lg {
-    height: 4rem;
+    height: 4rem!important;
     line-height: 4rem;
     padding: 0 2rem;
     font-size: 1.8rem;
