--- a/leadguitar.css
+++ b/leadguitar.css
@@ -3100,7 +3100,7 @@ a:hover {
 }
 .dark-mode .btn.btn-primary {
     color: #fff;
-    background-color: #2680d0;
+    background-color: #0b589c;
     background-image: none;
     border-color: #2680d0;
     -moz-box-shadow: 0 0.2rem 0 rgba(0, 0, 0, 0.1);
